--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-textarea-autosize": "^8.5.7",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
