--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"vite\" \"npx tailwindcss -i ./src/input.css -o ./src/output.css --watch\"",
-    "dev:host": "concurrently \"vite --host\" \"npx tailwindcss -i ./src/input.css -o ./src/output.css --watch\" ", 
+    "dev:host": "concurrently \"vite --host\" \"npx tailwindcss -i ./src/input.css -o ./src/output.css --watch\" ",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.1.3",
     "react-textarea-autosize": "^8.5.7",
     "react-toastify": "^11.0.5",
