--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "concurrently": "^9.1.2",
+    "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -33,7 +34,7 @@
     "react-router-dom": "^7.1.3",
     "react-textarea-autosize": "^8.5.7",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
