--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,6 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.1.3",
     "react-textarea-autosize": "^8.5.7",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
@@ -42,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tanstack/router-plugin": "^1.129.8",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
