--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.0.3",
     "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-router-devtools": "^1.129.8",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@tanstack/router-plugin": "^1.129.8",
+    "@tanstack/router-vite-plugin": "^1.130.2",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
