--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-textarea-autosize": "^8.5.7",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76"
   },
